fixed editor buttons responsive layout issues

--- a/css/jquery.pagedown-bootstrap.css
+++ b/css/jquery.pagedown-bootstrap.css
@@ -1,7 +1,8 @@
 .wmd-panel{width:100%;}
 .wmd-input{height:300px;width:100%;box-sizing:border-box;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-ms-box-sizing:border-box;}
 .wmd-preview{width:100%;box-sizing:border-box;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-ms-box-sizing:border-box;}
-.wmd-panel .btn-toolbar{margin-bottom:0;padding:0 0 5px;width:100%;}
+.wmd-panel .btn-toolbar{margin-bottom:0;padding:0;width:100%;}
+.wmd-panel .btn-toolbar .btn-group{margin-bottom:5px;}
 .fa-header:before{content:'H';font-family:arial,helvetica,sans-serif;font-weight:bold;}
 .wmd-prompt-background{background-color:Black;}
 .wmd-prompt-dialog{border:1px solid #999999;background-color:#F5F5F5;}
